--- a/package.json
+++ b/package.json
@@ -9,10 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@mediapipe/pose": "^0.5.1675469404",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@tensorflow-models/mobilenet": "^2.1.1",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-react-native": "^1.0.0",
+    "browser-image-compression": "^2.0.2",
     "expo": "~52.0.11",
+    "expo-camera": "^16.0.7",
+    "expo-file-system": "^18.0.4",
+    "expo-gl": "^15.0.2",
+    "expo-gl-cpp": "^11.4.0",
+    "expo-screen-orientation": "^8.0.0",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-dom": "^18.3.1",
+    "react-native": "0.76.3",
+    "react-native-canvas": "^0.1.40",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-svg": "^15.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
